<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgPerson"
        android:layout_width="0dp"
        android:layout_height="416dp"
        android:clickable="true"
        android:contentDescription="@string/photoPerson"
        android:onClick="onClickPhoto"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:src="@tools:sample/avatars" />

    <EditText
            android:id="@+id/editName"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="Name"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/putFirstName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPerson" android:inputType="none"/>

    <EditText
            android:id="@+id/editSurname"
            style="@android:style/Widget.Material.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="Surname"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/putSurname"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editName" android:inputType="none"/>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/Close"
        android:onClick="onClickBack"
        android:src="@drawable/ic_close_white_24dp"
        app:layout_constraintBottom_toTopOf="@+id/imgPerson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:onClick="onClickAdd"
        android:src="@drawable/ic_check_white_24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>